etc/tests/error/type/lambda-typo.ny
;; expect: did you mean keyword 'lambda'
def f = lamda(x){ x }
